1. 将store从组件中抽出来，可以有外部传入 2. 增加设定矩形框功能, store.addMeasure() 3. 修复组件做动画时销毁的异常情况

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "liveimage",
   "version": "1.0.0",
   "description": "An react component for live image",
-  "main": "build/LiveImage.js",
+  "main": "build/index.js",
   "scripts": {
     "build": "./node_modules/.bin/gulp build",
     "watch": "./node_modules/.bin/gulp watchJs",
